Split positions into components and containers, fixed validation check with snackbar

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-    <main class="container">
+    <!-- <main class="container">
       <h1>Hvem gjør hva?</h1>
 
       <div class="grid">
@@ -51,4 +51,6 @@
         </table>
 
       </mat-card>
-    </main>
+    </main> -->
+
+    <app-who-does-what-container-component></app-who-does-what-container-component>
