--- a/src/app/containers/who-does-what/who-does-what-container.component.html
+++ b/src/app/containers/who-does-what/who-does-what-container.component.html
@@ -1,1 +1,8 @@
-<app-positions-container-component/>
+<div class="who-does-what-container">
+  <h1>Hvem gjør hva?</h1>
+
+  <app-positions-container-component/>
+
+  <app-employee-container-component />
+
+</div>
