--- a/src/app/components/positions-component/positions-table/positions-table.html
+++ b/src/app/components/positions-component/positions-table/positions-table.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="dataSource" matSort [trackBy]="trackById">
+<table class="positions-table" mat-table [dataSource]="dataSource" matSort [trackBy]="trackById">
 
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>id</th>
