--- a/src/app/containers/who-does-what/who-does-what-container.component.html
+++ b/src/app/containers/who-does-what/who-does-what-container.component.html
@@ -1,8 +1,14 @@
 <div class="who-does-what-container">
   <h1>Hvem gjør hva?</h1>
 
-  <app-positions-container-component/>
+  <div class="who-does-what-container__content">
 
-  <app-employee-container-component />
+      <app-employee-container-component />
+
+      <app-positions-container-component/>
+
+      <app-task-container-component />
+
+  </div>
 
 </div>
