--- a/src/app/containers/positions-container/positions-container.component.scss
+++ b/src/app/containers/positions-container/positions-container.component.scss
@@ -1,6 +1,7 @@
 .positions-container{
   display: flex;
   flex-direction: column;
+  max-width: fit-content;
   gap: 16px;
   padding: 16px;
   background-color: #fff;
