--- a/src/app/containers/task-container/task-container.scss
+++ b/src/app/containers/task-container/task-container.scss
@@ -1,7 +1,7 @@
-.employee-container{
+.task-container{
   display: flex;
   flex-direction: column;
-  width: 500px;
+  max-width: fit-content;
   gap: 16px;
   padding: 16px;
   background-color: #fff;
@@ -23,5 +23,3 @@
     border-radius: 4px;
   }
 }
-
-
