--- a/src/app/containers/who-does-what/who-does-what-container.component.scss
+++ b/src/app/containers/who-does-what/who-does-what-container.component.scss
@@ -1,11 +1,18 @@
 .who-does-what-container {
-  padding: 16px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  padding: 16px;
   gap: 32px;
+
+  &__content {
+    display: flex;
+    flex-direction: row;
+    gap: 32px;
+  }
 }
 h1 {
   text-align: center;
   margin-bottom: 24px;
-    color: #333;
+  color: #333;
 }
