--- a/src/app/containers/who-does-what/who-does-what-container.component.html
+++ b/src/app/containers/who-does-what/who-does-what-container.component.html
@@ -3,11 +3,9 @@
 
   <div class="who-does-what-container__content">
 
-      <app-employee-container-component />
-
-      <app-positions-container-component/>
-
-      <app-task-container-component />
+    <app-employee-container-component [employees]="getEmployees()"/>
+    <app-positions-container-component [positions]="getPositions()" />
+    <app-task-container-component [task]="getTasks()" />
 
   </div>
 
